--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="about.html">
                 <img src="images/Z Industries3.png" alt="Main Logo" class="logo">
                 <i class="Z-I Z-I logo"></i>
-                <img src="https://github.com/BradyZz/ZI.github.io/blob/main/Images/BigLogoCrop4.jpg" alt="Big Logo" class="MainTitle">
+                <img src="images/BigLogoCrop4.jpg" alt="Big Logo" class="MainTitle">
             </a>
         </div>
         <div id="nav-link-section" class="nav-section" >
