--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <nav>
         <div id="nav-logo-section" class="nav-section">
             <a href="about.html">
-                <img src="images/Z Industries3.png" alt="Main Logo" class="logo">
+                <img src="Z Industries3.png" alt="Main Logo" class="logo">
                 <i class="Z-I Z-I logo"></i>
-                <img src="images/BigLogoCrop4.jpg" alt="Big Logo" class="MainTitle">
+                <img src="BigLogoCrop4.jpg" alt="Big Logo" class="MainTitle">
             </a>
         </div>
         <div id="nav-link-section" class="nav-section" >
