--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 		<nav>
 			<div class="home-btn">
 				<a href="index.html">
-				  <img src="images/HomeIcon.png" alt="Home" />
+				  <img src="HomeIcon.png" alt="Home" />
 				</a>
 			  </div>
 		</nav>
