--- a/subscribe.html
+++ b/subscribe.html
@@ -11,7 +11,7 @@
    <body>
       <div class="home-btn">
          <a href="index.html">
-           <img src="images/HomeIcon.png" alt="Home" />
+           <img src="HomeIcon.png" alt="Home" />
          </a>
        </div>
        
